Remove timeline on mobile and fix circular reference in ShowMore

--- a/aksel.nav.no/website/app/dev/(designsystemet)/grunnleggende/endringslogg/_ui/Changelog.module.css
+++ b/aksel.nav.no/website/app/dev/(designsystemet)/grunnleggende/endringslogg/_ui/Changelog.module.css
@@ -125,3 +125,7 @@
   margin-left: 1rem;
   margin-bottom: 1rem;
 }
+
+.divider {
+  color: var(--ax-border-neutral-subtleA);
+}
